--- a/content/about/2020-03-24-.md
+++ b/content/about/2020-03-24-.md
@@ -49,4 +49,6 @@ description-es: >-
   dangers from their surrounding environment. Mission: To provide a learning
   friendly environment that consists of decreasing anxiety through practice,
   reinforcement and achieving customized goals.
+title: About Description
 ---
+*Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita **kasd gubergren**,* no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
