--- a/content/home/2020-03-26-test.md
+++ b/content/home/2020-03-26-test.md
@@ -1,7 +1,8 @@
 ---
 title: Home Description
 ---
-**Vision:** To become a household name in Virginia by ensuring each student can drive safely drive out on the streets and the in real world while facing different variable and dangers from their surrounding environment.
+**Visión:** Para convertirse en un nombre familiar en Virginia al garantizar que cada estudiante pueda conducir de manera segura en las calles y en el mundo real mientras enfrenta diferentes variables y peligros de su entorno.
 
-\
-**Mission**: To provide a learning friendly environment that consists of decreasing anxiety through practice, reinforcement and achieving customized goals.
+
+
+**Misión:** Proporcionar un ambiente amigable para el aprendizaje que consiste en disminuir la ansiedad a través de la práctica, el refuerzo y el logro de objetivos personalizados.
