Update Home-EN “2020-03-26-test”

--- a/content/home/2020-03-26-test.md
+++ b/content/home/2020-03-26-test.md
@@ -1,5 +1,5 @@
 ---
-title: Home Description-english
+title: Home Description-spanish
 ---
 **Visión:** Para convertirse en un nombre familiar en Virginia al garantizar que cada estudiante pueda conducir de manera segura en las calles y en el mundo real mientras enfrenta diferentes variables y peligros de su entorno.
 
