Update Home-EN “2020-03-26-hey”

--- a/content/home/en/2020-03-26-hey.md
+++ b/content/home/en/2020-03-26-hey.md
@@ -1,5 +1,5 @@
 ---
-title: Home English
+title: Home - English
 ---
 **Vision:** To become a household name in Virginia by ensuring each student can drive safely drive out on the streets and the in real world while facing different variable and dangers from their surrounding environment.
 
