--- a/content/home/2020-03-26-home.md
+++ b/content/home/2020-03-26-home.md
@@ -1,12 +1,16 @@
 ---
 title: Home
 ---
+## **English**
+
 **Vision:** To become a household name in Virginia by ensuring each student can drive safely drive out on the streets and the in real world while facing different variable and dangers from their surrounding environment.
 
 \
 **Mission**: To provide a learning friendly environment that consists of decreasing anxiety through practice, reinforcement and achieving customized goals.
 
 
+
+## Español
 
  **Visión:**  Convertirse en un nombre familiar en Virginia garantizando que cada estudiante pueda conducir de manera segura en las calles y en el mundo real mientras enfrenta diferentes variables y peligros de su entorno.
 
