Update Home “2020-03-26-home”

--- a/content/home/2020-03-26-home.md
+++ b/content/home/2020-03-26-home.md
@@ -1,7 +1,7 @@
 ---
 title: Home
 ---
-## **English**
+### **English**
 
 **Vision:** To become a household name in Virginia by ensuring each student can drive safely drive out on the streets and the in real world while facing different variable and dangers from their surrounding environment.
 
@@ -10,7 +10,7 @@ title: Home
 
 
 
-## Español
+### Español
 
  **Visión:**  Convertirse en un nombre familiar en Virginia garantizando que cada estudiante pueda conducir de manera segura en las calles y en el mundo real mientras enfrenta diferentes variables y peligros de su entorno.
 
