--- a/content/about/2020-03-26-about.md
+++ b/content/about/2020-03-26-about.md
@@ -1,7 +1,7 @@
 ---
 title: About
 ---
-### **English**
+##### **English**
 
 Abigail’s Driving School was started in 2012 by two Virginia Commonwealth University students. After both received traffic infractions, they had to attend a court mandated driver improvement class. During this class, they noticed Spanish speakers had to get an interpreter, which meant they would pay for the interpreter in addition to the class.
 
@@ -13,7 +13,9 @@ Our instructors have successfully passed an in-depth driving/criminal history ch
 
 Abigail’s Driving School is authorized, bonded, insured and certified by the Department of Motor Vehicles of Virginia.
 
-### **Español**
+
+
+##### **Español**
 
 La escuela de manejo de Abigail fue iniciada en 2012 por dos estudiantes de la Virginia Commonwealth University. Después de que ambos recibieron infracciones de tránsito, tuvieron que asistir a una clase de mejora del conductor obligatoria por la corte. Durante esta clase, notaron que los hispanohablantes tenían que conseguir un intérprete, lo que significaba que pagarían por el intérprete además de la clase. Los estudiantes se inspiraron para crear una escuela de manejo que pudiera proporcionar clases en español e inglés a un precio razonable. Como resultado, la escuela de manejo de Abigail se ha convertido en el único proveedor de escuelas de manejo en inglés y español en el área metropolitana de Richmond.
 
