--- a/content/home/2020-03-26-home.md
+++ b/content/home/2020-03-26-home.md
@@ -1,5 +1,13 @@
 ---
 title: Home
+es-translate: >-
+  **Visión:**  Convertirse en un nombre familiar en Virginia garantizando que
+  cada estudiante pueda conducir de manera segura en las calles y en el mundo
+  real mientras enfrenta diferentes variables y peligros de su entorno.
+
+
+  \
+   **Misión** : Proporcionar un ambiente amigable para el aprendizaje que consiste en disminuir la ansiedad a través de la práctica, el refuerzo y el logro de objetivos personalizados.
 ---
 ##### **English**
 
@@ -7,12 +15,3 @@ title: Home
 
 \
 **Mission**: To provide a learning friendly environment that consists of decreasing anxiety through practice, reinforcement and achieving customized goals.
-
-
-
-##### Español
-
- **Visión:**  Convertirse en un nombre familiar en Virginia garantizando que cada estudiante pueda conducir de manera segura en las calles y en el mundo real mientras enfrenta diferentes variables y peligros de su entorno.
-
-\
- **Misión** : Proporcionar un ambiente amigable para el aprendizaje que consiste en disminuir la ansiedad a través de la práctica, el refuerzo y el logro de objetivos personalizados.
