--- a/content/courses-es/2020-04-02--2.md
+++ b/content/courses-es/2020-04-02--2.md
@@ -1,4 +1,4 @@
 ---
 title-es: Drivers Manual Courses
 ---
- The Driver Manual Course is for individuals who have failed the learner’s permit test at the DMV three times. Adults who are 18 and over are eligible to take the 8-hour driver manual course. Teenagers under 18 must take the 36-hour drivers education course as required by [Virginia Department of Education](http://www.doe.virginia.gov/instruction/driver_education/index.shtml).
+El curso del Manual del conductor es para personas que han reprobado el examen de permiso de aprendizaje en el DMV tres veces. Los adultos mayores de 18 años son elegibles para tomar el curso manual del conductor de 8 horas. Los adolescentes menores de 18 años deben tomar el curso de educación para conductores de 36 horas según lo requerido por el [Departamento de Educación de Virginia](http://www.doe.virginia.gov/instruction/driver_education/index.shtml).
