--- a/content/courses-es/2020-04-02-.md
+++ b/content/courses-es/2020-04-02-.md
@@ -1,4 +1,4 @@
 ---
-title-es: Adult Drivers Education - ES
+title-es: Educación para conductores adultos
 ---
 Las personas de 18 años de edad y mayores que nunca hayan tenido una licencia de conducir emitida por el estado de los EE. UU., Deben tener su permiso de aprendizaje de Virginia durante 60 días antes de ser elegibles para tomar el examen práctico de manejo en el DMV. Para renunciar al requisito de tener el permiso por 60 días, el individuo puede completar un programa de educación para conductores aprobado por el estado, también conocido como la Exención de 60 días. Al finalizar, la escuela llevará a cabo su examen práctico. Este curso es idéntico al programa de educación para conductores adolescentes.
