--- a/content/home-es/2020-04-02-.md
+++ b/content/home-es/2020-04-02-.md
@@ -1,5 +1,5 @@
 ---
-title-es: Home-es
+title-es: Hogar
 es-translate: >-
   **Visión:**  Convertirse en un nombre familiar en Virginia garantizando que
   cada estudiante pueda conducir de manera segura en las calles y en el mundo
