--- a/content/formar/2020-04-03-.md
+++ b/content/formar/2020-04-03-.md
@@ -1,3 +1,6 @@
+---
+title-es: Formar
+---
 1. Por cada lección detrás del volante, el estudiante debe conducir al menos 1 hora en casa
 
 2. Los padres permiten que el alumno matriculado conduzca el vehículo de la escuela durante la clase detrás del volante.
