--- a/content/fTranslate/2020-04-03-.md
+++ b/content/fTranslate/2020-04-03-.md
@@ -1,25 +1,18 @@
 ---
 title-es: F Translate
 ---
-
 1. Por cada lección detrás del volante, el estudiante debe conducir al menos 1 hora en casa
-
 2. Los padres permiten que el alumno matriculado conduzca el vehículo de la escuela durante la clase detrás del volante.
-
 3. Las tarifas se pagan en efectivo, cheque personal, giro postal o tarjetas de crédito (se aplican tarifas de procesamiento para la tarjeta de crédito) antes de recibir / otorgar la certificación correspondiente.
-
-4. Los clientes deben pagar un depósito no reembolsable de \$ 50 para asegurar el espacio de entrenamiento detrás del volante al realizar la reserva.
-
+4. Los clientes deben pagar un depósito no reembolsable de $ 50 para asegurar el espacio de entrenamiento detrás del volante al realizar la reserva.
 5. Como mínimo, el cliente debe hacer un esfuerzo para pagar al menos el 50% del costo total de la clase antes de la primera clase.
-
-6. Si corresponde, la instrucción detrás del volante se lleva a cabo solo con una cita y se le puede cobrar al estudiante una tarifa regular de \$ 40.00 por cualquier cita que no cumpla o pierda, a menos que la escuela reciba un aviso de al menos 24 horas. El estudiante debe recuperar las clases perdidas (instrucción / en el auto) dentro de los 7 días.
-
+6. Si corresponde, la instrucción detrás del volante se lleva a cabo solo con una cita y se le puede cobrar al estudiante una tarifa regular de $ 40.00 por cualquier cita que no cumpla o pierda, a menos que la escuela reciba un aviso de al menos 24 horas. El estudiante debe recuperar las clases perdidas (instrucción / en el auto) dentro de los 7 días.
 7. Se proporcionará un reembolso de cualquier tarifa o matrícula, previa solicitud por escrito, a menos que la escuela sea capaz o esté dispuesta a cumplir su parte del contrato dentro de un período de tiempo razonable.
-
 8. No se emitirá ninguna certificación hasta que todas las tarifas hayan sido pagadas en su totalidad.
-
 9. La escuela completará el curso en un período de tiempo razonable; sin embargo, no se hace responsable de los retrasos causados ​​por fallas mecánicas, condiciones de manejo inseguras debido al mal tiempo o cualquier razón que no tenga control. La escuela le dará al estudiante el mayor aviso posible de cualquier demora.
-
 10. El período de instrucción no garantiza que ningún estudiante aprobará el examen de licencia estatal o obtendrá una licencia, ni la instrucción completa garantiza ningún tipo de empleo.
-
 11. La escuela de manejo de Abigail se reserva el derecho de referir ciertos servicios a un tercero si la escuela no puede acomodar a un cliente.
+
+    \
+    \
+    El DMV se compromete a promover la seguridad del transporte a través de la certificación de programas de capacitación para conductores de calidad. Si tiene comentarios o inquietudes sobre este curso, llame a nuestro número gratuito: 1-877-885-5790 o envíe un correo electrónico a dmvclu@dmv.virginia.com (2/2020)
