--- a/content/form/2020-04-03-.md
+++ b/content/form/2020-04-03-.md
@@ -1,8 +1,6 @@
 ---
 title: Form
 ---
-
-
 1. For every behind the wheel lesson, the student must drive at minimum 1hr at home
 2. Parents allow the enrolled student to drive the school’s vehicle during behind the wheel lesson.
 3. Fees are payable by cash, personal check, money order or credit cards (processing fees apply for credit card) prior to receipt/awarding of relevant certification.
@@ -14,3 +12,7 @@ title: Form
 9. The school will complete the course in a reasonable length of time; however, it cannot be held responsible for delays caused by mechanical failure, unsafe driving conditions due to bad weather or any reason which it has no control. The school will give the student as much notice as possible of any delays.
 10. The instruction period does not guarantee that any student will pass the state license examination or secure a license, nor does the completed instruction guarantee employment of any kind.
 11. Abigail’s Driving School reserves the right to refer certain services to a third party if the school is unable to accommodate a customer.
+
+    \
+    \
+    DMV is committed to promoting transportation safety through the certification of quality driver training programs. If you have comments or concerns about this course, call our toll-free number: 1-877-885-5790 or email dmvclu@dmv.virginia.com (2/2020)
