Update FAQ “2020-03-26-faq”

--- a/content/faq/2020-03-26-faq.md
+++ b/content/faq/2020-03-26-faq.md
@@ -4,45 +4,32 @@ es-translate: >-
   ###  **¿Cómo se solicita un permiso de aprendizaje en Virginia?** 
 
 
-  Visite la página [Solicitud de un permiso de
-  aprendizaje](https://www.dmv.virginia.gov/drivers/#applying_learners.asp) en
-  el sitio web del Departamento de Vehículos Motorizados de Virginia.
+  Visite la página [Solicitud de un permiso de aprendizaje](https://www.dmv.virginia.gov/drivers/#applying_learners.asp) en el sitio web del Departamento de Vehículos Motorizados de Virginia.
 
 
   ###  **¿Cómo se obtiene una licencia en Virginia?** 
 
 
-  Visite la página [Solicitud de licencia de
-  conducir](https://www.dmv.virginia.gov/drivers/#applying.asp) en el sitio web
-  del Departamento de Vehículos Motorizados de Virginia.
+  Visite la página [Solicitud de licencia de conducir](https://www.dmv.virginia.gov/drivers/#applying.asp) en el sitio web del Departamento de Vehículos Motorizados de Virginia.
 
 
   ###  **¿Cuál es el trato con los puntos de conducción?** 
 
 
-  Las siguientes infracciones se agrupan según el número de puntos de demérito
-  del DMV asignados a cada infracción. El número de años que la condena
-  permanece en su registro del DMV está entre paréntesis al lado de cada
-  violación. Un asterisco (*) indica que la condena permanece en su registro de
-  forma permanente.
+  Las siguientes infracciones se agrupan según el número de puntos de demérito del DMV asignados a cada infracción. El número de años que la condena permanece en su registro del DMV está entre paréntesis al lado de cada violación. Un asterisco (*) indica que la condena permanece en su registro de forma permanente.
 
 
-  ** [Violaciones de seis
-  puntos](https://www.dmv.virginia.gov/drivers/#points_6.asp)**  \
+  ** [Violaciones de seis puntos](https://www.dmv.virginia.gov/drivers/#points_6.asp)**  \
 
-  ** [Infracciones de cuatro
-  puntos](https://www.dmv.virginia.gov/drivers/#points_4.asp)**  \
+  ** [Infracciones de cuatro puntos](https://www.dmv.virginia.gov/drivers/#points_4.asp)**  \
 
-  ** [Infracciones de tres
-  puntos](https://www.dmv.virginia.gov/drivers/#points_3.asp)** 
+  ** [Infracciones de tres puntos](https://www.dmv.virginia.gov/drivers/#points_3.asp)** 
 
 
-  ###  **¿Abigail's Driving School honrará la educación de los conductores en
-  clase de otra escuela?** 
+  ###  **¿Abigail's Driving School honrará la educación de los conductores en clase de otra escuela?** 
 
 
-  Sí, siempre que tenga prueba de haber completado la parte de su clase antes de
-  inscribirse en la Escuela de conducción de Abigail.
+  Sí, siempre que tenga prueba de haber completado la parte de su clase antes de inscribirse en la Escuela de conducción de Abigail.
 
 
 
@@ -50,18 +37,13 @@ es-translate: >-
   ###  **¿Por qué su precio es más alto que otras escuelas?** 
 
 
-  Estás pagando por la calidad. Nuestro modelo de negocio se centra en la
-  calidad en lugar de la cantidad. No estamos compitiendo para ver quién puede
-  capacitar a la mayoría de los estudiantes, sino que estamos en un negocio que
-  busca producir conductores calificados en la Commonwealth.
+  Estás pagando por la calidad. Nuestro modelo de negocio se centra en la calidad en lugar de la cantidad. No estamos compitiendo para ver quién puede capacitar a la mayoría de los estudiantes, sino que estamos en un negocio que busca producir conductores calificados en la Commonwealth.
 
 
   ###  **¿Tiene plan de pago?** 
 
 
-  No, no lo hacemos, sin embargo, las decisiones de pago se deciden de forma
-  individual. Requerimos un depósito de $ 50 cuando se registra. Requerimos como
-  mínimo el 50% del saldo restante el primer día de clase.
+  No, no lo hacemos, sin embargo, las decisiones de pago se deciden de forma individual. Requerimos un depósito de $ 50 cuando se registra. Requerimos como mínimo el 50% del saldo restante el primer día de clase.
 
 
   ###  **¿Vas a emitir mi licencia?** 
@@ -73,41 +55,31 @@ es-translate: >-
   ###  **¿Necesito tener habilidades básicas de manejo?** 
 
 
-  Antes de inscribirse, le recomendamos tener un mínimo de 15 horas de manejo.
-  ¿Por qué? ¿Quiere perder $ 400 más conduciendo en un estacionamiento? Estamos
-  asegurados, todos nuestros autos tienen un sistema de doble freno y letreros
-  de estudiantes. Queremos que se sienta cómodo manejando en la carretera.
+  Antes de inscribirse, le recomendamos tener un mínimo de 15 horas de manejo. ¿Por qué? ¿Quiere perder $ 400 más conduciendo en un estacionamiento? Estamos asegurados, todos nuestros autos tienen un sistema de doble freno y letreros de estudiantes. Queremos que se sienta cómodo manejando en la carretera.
 
 
-  ###  **¿Emite el permiso de aprendizaje? ¿Me puede decir cómo es mi historial
-  de manejo?** 
+  ###  **¿Emite el permiso de aprendizaje? ¿Me puede decir cómo es mi historial de manejo?** 
 
 
-  No, debe comunicarse con la [DMV - Cuenta
-  MyDMV](https://www.dmv.virginia.gov/onlineServices/#index.html)
+  No, debe comunicarse con la [DMV - Cuenta MyDMV](https://www.dmv.virginia.gov/onlineServices/#index.html)
 
 
   ###  **¿Recogerás y dejarás las clases detrás del volante?** 
 
 
-  Sí, recogemos y dejamos. Tenga en cuenta que no brindamos servicios en áreas a
-  más de 10 millas de nuestra oficina central, es decir, Hopewell, Goochland,
-  Midlothian, etc.
+  Sí, recogemos y dejamos. Tenga en cuenta que no brindamos servicios en áreas a más de 10 millas de nuestra oficina central, es decir, Hopewell, Goochland, Midlothian, etc.
 
 
-  ###  **Incluso si tenía una licencia en el pasado, ¿tengo que esperar 60
-  días?** 
+  ###  **Incluso si tenía una licencia en el pasado, ¿tengo que esperar 60 días?** 
 
 
-  Póngase en contacto con el [DMV](https://www.dmv.virginia.gov/#/) para obtener
-  preguntas específicas como esta.
+  Póngase en contacto con el [DMV](https://www.dmv.virginia.gov/#/) para obtener preguntas específicas como esta.
 
 
   ###  **¿Aceptará un permiso de otro estado?** 
 
 
-  No, obtenga su permiso de aprendizaje antes de inscribirse en nuestro curso de
-  educación para conductores en la clase y / o detrás del volante.
+  No, obtenga su permiso de aprendizaje antes de inscribirse en nuestro curso de educación para conductores en la clase y / o detrás del volante.
 
 
   ###  **¿Qué tan pronto puedo comenzar?** 
@@ -120,9 +92,7 @@ es-translate: >-
 
 
 
-  ###  **Si tomo un curso de reexamen en clase debido a que no pasé el examen de
-  permiso de aprendizaje, y no apruebo nuevamente en el DMV, ¿puedo volver a
-  tomar el curso sin pagar?** 
+  ###  **Si tomo un curso de reexamen en clase debido a que no pasé el examen de permiso de aprendizaje, y no apruebo nuevamente en el DMV, ¿puedo volver a tomar el curso sin pagar?** 
 
 
   Por supuesto.
@@ -131,42 +101,30 @@ es-translate: >-
   ###  **¿Tiene descuentos?** 
 
 
-  Desafortunadamente, no ofrecemos descuentos a menos que esté afiliado a una
-  organización sin fines de lucro específica y / o reciba servicios de un
-  proveedor de servicios. Se requiere prueba y validación.
+  Desafortunadamente, no ofrecemos descuentos a menos que esté afiliado a una organización sin fines de lucro específica y / o reciba servicios de un proveedor de servicios. Se requiere prueba y validación.
 
 
   ###  **¿Necesito un seguro de automóvil?** 
 
 
-  De acuerdo con el [Virgina
-  DMV](https://www.dmv.virginia.gov/vehicles/#insurance.asp), debe certificar
-  que su vehículo está cubierto por los requisitos mínimos de seguro o pagar la
-  tarifa de vehículo motorizado sin seguro. Su compañía de seguros debe estar
-  autorizada para realizar negocios en Virginia. Consulte esta extensa guía
-  sobre seguros de automóviles para encontrar comparaciones, información útil y
-  aspectos a tener en cuenta al buscar el seguro de automóvil adecuado para
-  usted.
+  De acuerdo con el [Virgina DMV](https://www.dmv.virginia.gov/vehicles/#insurance.asp), debe certificar que su vehículo está cubierto por los requisitos mínimos de seguro o pagar la tarifa de vehículo motorizado sin seguro. Su compañía de seguros debe estar autorizada para realizar negocios en Virginia. Consulte esta extensa guía sobre seguros de automóviles para encontrar comparaciones, información útil y aspectos a tener en cuenta al buscar el seguro de automóvil adecuado para usted.
 
 
-  *  **Enlace al DMV de Virginia:** 
-  <https://www.dmv.virginia.gov/vehicles/#insurance.asp>
+  *  **Enlace al DMV de Virginia:**  <https://www.dmv.virginia.gov/vehicles/#insurance.asp>
 
-  *  **Enlace a información sobre tarifas de vehículos motorizados sin
-  seguro:**  <https://www.dmv.virginia.gov/vehicles/#uninsured_fee.asp>
+  *  **Enlace a información sobre tarifas de vehículos motorizados sin seguro:**  <https://www.dmv.virginia.gov/vehicles/#uninsured_fee.asp>
 
-  *  **Enlace a la Guía sobre seguros de automóviles** :
-  <https://www.consumersadvocate.org/car-insurance>
+  *  **Enlace a la Guía sobre seguros de automóviles** : <https://www.consumersadvocate.org/car-insurance>
 ---
-###  **How do you apply for a learner's permit in Virginia?**
+##### **How do you apply for a learner's permit in Virginia?**
 
 Visit [Applying for a Learner's Permit](https://www.dmv.virginia.gov/drivers/#applying_learners.asp) page on Virginia's Department of Motor Vehicle's website.
 
-### **How do youget a license in Virginia?**
+##### **How do youget a license in Virginia?**
 
 Visit [Applying for Driver's License](https://www.dmv.virginia.gov/drivers/#applying.asp) page on Virginia's Department of Motor Vehicle's website.
 
-### **What is the deal with driving points?**
+##### **What is the deal with driving points?**
 
 The following violations are grouped according to the number of DMV demerit points assigned to each violation. The number of years that the conviction stays on your DMV record is in parentheses beside each violation. An asterisk (*) indicates that the conviction remains on your record permanently.
 
@@ -174,57 +132,57 @@ The following violations are grouped according to the number of DMV demerit poin
 **[Four Point Violations](https://www.dmv.virginia.gov/drivers/#points_4.asp)**\
 **[Three Point Violations](https://www.dmv.virginia.gov/drivers/#points_3.asp)**
 
-### **Will Abigail's Driving School honorin-class drivers education from another school?**
+##### **Will Abigail's Driving School honorin-class drivers education from another school?**
 
 Yes, as long as you have proof of completing the in-class portion in advance of enrolling with Abigail's Driving School.
 
-### **Why is your price higher than other schools?**
+##### **Why is your price higher than other schools?**
 
 You are paying for quality. Our business model is focused on quality as opposed to quantity. We are not competing to see who can train the most students, but rather we are in business that seeks to produce qualified drivers in the Commonwealth.
 
-### **Do you have payment plan?**
+##### **Do you have payment plan?**
 
 No we do not, however, payment decisions are decided on an individual basis. We require $50 deposit when you register. We require at minimum of 50% of remaining balance on the first day of class.
 
-### **Are you going to issue my license?**
+##### **Are you going to issue my license?**
 
 **Teen:**If you are a teenager and have met the state requirement for permit hold period, age, hours of driving - we will issue your TDL 180 (temporary drivers license for 180 days) upon completion of your behind the wheel and classroom.
 
 **Adult:**If you complete the 60 day waiver program, we issue DTS D - a paper that qualifies you to go to the DMV so you are able to exchange your learner's permit for a drivers license.
 
-### **Do i need to have basic driving skills?**
+##### **Do i need to have basic driving skills?**
 
 Prior to enrolling we encourage you to have at minimum of 15 hours of driving. Why? Do you want to waste $400 plus driving in a parking lot? We are insured, all our cars have dual brake system and student driver signs. We want to get you comfortable driving on the road.
 
-### **Do you issue learner's permit? Can you tell me what my driving record is like?**
+##### **Do you issue learner's permit? Can you tell me what my driving record is like?**
 
 No you need to contact the[DMV - MyDMV Account](https://www.dmv.virginia.gov/onlineServices/#index.html)
 
-### **Will you pick up and drop off for behind the wheel classes?**
+##### **Will you pick up and drop off for behind the wheel classes?**
 
 Yes, we pick up and drop off. Please be mindful that we do not provide services in areas 10 plus miles away from our central office, i.e. Hopewell, Goochland, Midlothian etc.
 
-### **Even if i had a license in the past, do i have to wait for 60 days?**
+##### **Even if i had a license in the past, do i have to wait for 60 days?**
 
 Contact the[DMV](https://www.dmv.virginia.gov/#/)to get specific questions such as this.
 
-### **Will you accept a permit from another state?**
+##### **Will you accept a permit from another state?**
 
 No, please get your learner's permit before enrolling in our in-class and/or behind the wheel drivers education course.
 
-### **How soon can i start?**
+##### **How soon can i start?**
 
 Start time/date is first come/first serve.
 
-### **If i take a re-exam course for in-class due to failing the learner's permit test - and i do not pass again at the DMV, can i take the course with you again without paying?**
+##### **If i take a re-exam course for in-class due to failing the learner's permit test - and i do not pass again at the DMV, can i take the course with you again without paying?**
 
 Of course.
 
-### **Do you have discounts?**
+##### **Do you have discounts?**
 
 Unfortunately, we do not offer discounts unless you are affiliated with a specific non-profit and/or are in receipt of services from a service provider. Proof and validation required.
 
-### **Do I need car insurance?**
+##### **Do I need car insurance?**
 
 According to the [Virgina DMV](https://www.dmv.virginia.gov/vehicles/#insurance.asp), you must certify that your vehicle is covered by the minimum insurance requirements, or pay the Uninsured Motor Vehicle Fee. Your insurance carrier must be authorized to conduct business in Virginia. Check out this extensive guide on car insurance to find comparisons, helpful information, and things to consider when seeking the right car insurance for you.
 
