--- a/content/faq/2020-03-26-faq.md
+++ b/content/faq/2020-03-26-faq.md
@@ -116,15 +116,15 @@ es-translate: >-
 
   *  **Enlace a la Guía sobre seguros de automóviles** : <https://www.consumersadvocate.org/car-insurance>
 ---
-##### **How do you apply for a learner's permit in Virginia?**
+#### **How do you apply for a learner's permit in Virginia?**
 
 Visit [Applying for a Learner's Permit](https://www.dmv.virginia.gov/drivers/#applying_learners.asp) page on Virginia's Department of Motor Vehicle's website.
 
-##### **How do youget a license in Virginia?**
+#### **How do you get a license in Virginia?**
 
 Visit [Applying for Driver's License](https://www.dmv.virginia.gov/drivers/#applying.asp) page on Virginia's Department of Motor Vehicle's website.
 
-##### **What is the deal with driving points?**
+#### **What is the deal with driving points?**
 
 The following violations are grouped according to the number of DMV demerit points assigned to each violation. The number of years that the conviction stays on your DMV record is in parentheses beside each violation. An asterisk (*) indicates that the conviction remains on your record permanently.
 
@@ -132,45 +132,45 @@ The following violations are grouped according to the number of DMV demerit poin
 **[Four Point Violations](https://www.dmv.virginia.gov/drivers/#points_4.asp)**\
 **[Three Point Violations](https://www.dmv.virginia.gov/drivers/#points_3.asp)**
 
-##### **Will Abigail's Driving School honorin-class drivers education from another school?**
+#### **Will Abigail's Driving School honoring-class drivers education from another school?**
 
 Yes, as long as you have proof of completing the in-class portion in advance of enrolling with Abigail's Driving School.
 
-##### **Why is your price higher than other schools?**
+#### **Why is your price higher than other schools?**
 
 You are paying for quality. Our business model is focused on quality as opposed to quantity. We are not competing to see who can train the most students, but rather we are in business that seeks to produce qualified drivers in the Commonwealth.
 
-##### **Do you have payment plan?**
+#### **Do you have payment plan?**
 
 No we do not, however, payment decisions are decided on an individual basis. We require $50 deposit when you register. We require at minimum of 50% of remaining balance on the first day of class.
 
-##### **Are you going to issue my license?**
+#### **Are you going to issue my license?**
 
 **Teen:**If you are a teenager and have met the state requirement for permit hold period, age, hours of driving - we will issue your TDL 180 (temporary drivers license for 180 days) upon completion of your behind the wheel and classroom.
 
 **Adult:**If you complete the 60 day waiver program, we issue DTS D - a paper that qualifies you to go to the DMV so you are able to exchange your learner's permit for a drivers license.
 
-##### **Do i need to have basic driving skills?**
+#### **Do i need to have basic driving skills?**
 
 Prior to enrolling we encourage you to have at minimum of 15 hours of driving. Why? Do you want to waste $400 plus driving in a parking lot? We are insured, all our cars have dual brake system and student driver signs. We want to get you comfortable driving on the road.
 
-##### **Do you issue learner's permit? Can you tell me what my driving record is like?**
+#### **Do you issue learner's permit? Can you tell me what my driving record is like?**
 
 No you need to contact the[DMV - MyDMV Account](https://www.dmv.virginia.gov/onlineServices/#index.html)
 
-##### **Will you pick up and drop off for behind the wheel classes?**
+#### **Will you pick up and drop off for behind the wheel classes?**
 
 Yes, we pick up and drop off. Please be mindful that we do not provide services in areas 10 plus miles away from our central office, i.e. Hopewell, Goochland, Midlothian etc.
 
-##### **Even if i had a license in the past, do i have to wait for 60 days?**
+#### **Even if i had a license in the past, do i have to wait for 60 days?**
 
 Contact the [DMV](https://www.dmv.virginia.gov/#/) to get specific questions such as this.
 
-##### **Will you accept a permit from another state?**
+#### **Will you accept a permit from another state?**
 
 No, please get your learner's permit before enrolling in our in-class and/or behind the wheel drivers education course.
 
-##### **How soon can i start?**
+#### **How soon can i start?**
 
 Start time/date is first come/first serve.
 
@@ -178,11 +178,11 @@ Start time/date is first come/first serve.
 
 Of course.
 
-##### **Do you have discounts?**
+#### **Do you have discounts?**
 
 Unfortunately, we do not offer discounts unless you are affiliated with a specific non-profit and/or are in receipt of services from a service provider. Proof and validation required.
 
-##### **Do I need car insurance?**
+#### **Do I need car insurance?**
 
 According to the [Virgina DMV](https://www.dmv.virginia.gov/vehicles/#insurance.asp), you must certify that your vehicle is covered by the minimum insurance requirements, or pay the Uninsured Motor Vehicle Fee. Your insurance carrier must be authorized to conduct business in Virginia. Check out this extensive guide on car insurance to find comparisons, helpful information, and things to consider when seeking the right car insurance for you.
 
