Update FAQ “2020-03-26-faq”

--- a/content/faq/2020-03-26-faq.md
+++ b/content/faq/2020-03-26-faq.md
@@ -174,7 +174,7 @@ No, please get your learner's permit before enrolling in our in-class and/or beh
 
 Start time/date is first come/first serve.
 
-##### **If i take a re-exam course for in-class due to failing the learner's permit test - and i do not pass again at the DMV, can i take the course with you again without paying?**
+#### **If i take a re-exam course for in-class due to failing the learner's permit test - and i do not pass again at the DMV, can i take the course with you again without paying?**
 
 Of course.
 
