Update FAQ “2020-03-26-faq”

--- a/content/faq/2020-03-26-faq.md
+++ b/content/faq/2020-03-26-faq.md
@@ -116,7 +116,7 @@ es-translate: >-
 
   *  **Enlace a la Guía sobre seguros de automóviles** : <https://www.consumersadvocate.org/car-insurance>
 ---
-#### **How do you apply for a learner's permit in Virginia?**
+#### How do you apply for a learner's permit in Virginia?
 
 Visit [Applying for a Learner's Permit](https://www.dmv.virginia.gov/drivers/#applying_learners.asp) page on Virginia's Department of Motor Vehicle's website.
 
